// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalloutParagraph renders 1`] = `
<CalloutParagraph__TextWrapper
  spacing="default"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    Text
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with compact 1`] = `
<CalloutParagraph__TextWrapper
  spacing="compact"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    Text
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with intermediate 1`] = `
<CalloutParagraph__TextWrapper
  spacing="intermediate"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    Text
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with narrow 1`] = `
<CalloutParagraph__TextWrapper
  spacing="narrow"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    Text
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;
